2008-06-04 - Sean Huber (shuber@huberry.com)
	* Added functional tests

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Fixed functional test exception

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Controller and model must call uses_authentication

2008-06-04 - Sean Huber (shuber@huberry.com)
	* Initial import from access_control_list repository
	* Login field is configurable