@@ -1,4 +1,7 @@
 2008-06-04 - Sean Huber (shuber@huberry.com)
+	* Updated README
+
+2008-06-04 - Sean Huber (shuber@huberry.com)
 	* Added functional tests
 
 2008-06-04 - Sean Huber (shuber@huberry.com)
